# whisper_video_summarization

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
configs/: train.yaml
configs/data/: gazeta.yaml
configs/logging/: mlflow.yaml
configs/model/: t5.yaml
configs/paths/: paths.yaml
whisper_video_summarization/: __init__.py
whisper_video_summarization/api/: app.py  infer.py  schemas.py  train.py
whisper_video_summarization/streamlit/: app.py
whisper_video_summarization/training/: infer.py  train.py
whisper_video_summarization/utils/: dvc.py  logging.py  metrics.py  paths.py  seed.py
whisper_video_summarization/whisper/: transcribe.py
